fix: sonarlint changes